k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: josh-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      nodeSelector:
        location: na
      containers:
        - name: ${SERVICE_NAME}
          image: ${IMAGE_LOCATION}
          imagePullPolicy: Always
          resources:
            limits:
              cpu: ${CPU_LIMIT}
              memory: ${MEMORY_LIMIT}
            requests:
              cpu: ${CPU_REQUEST}
              memory: ${MEMORY_REQUEST}
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: api
              readOnly: true
              mountPath: /node/config/api.json
              subPath: api.json
            - name: auth
              readOnly: true
              mountPath: /node/config/auth.json
              subPath: auth.json
            - name: config
              readOnly: true
              mountPath: /node/config/config.json
              subPath: config.json
            - name: cert
              readOnly: true
              mountPath: /node/config/ssl-bongo.crt
              subPath: ssl-bongo.crt
            - name: key
              readOnly: true
              mountPath: /node/config/ssl-bongo.key
      imagePullSecrets:
        - name: github-registry
      volumes:
        - name: api
          secret:
            secretName: ${PREFIX}bongo-bot-api.json
        - name: auth
          secret:
            secretName: bongo-bot-api-auth.json
        - name: config
          configMap:
            name: bongo-bot-config.json
        - name: cert
          secret:
            secretName: ssl-bongo.crt
        - name: key
          secret:
            secretName: ssl-bongo.key
