k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bongo-api
  namespace: josh-apps
spec:
  type: NodePort
  ports:
    - port: 8443
      nodePort: 30046
      targetPort: 8443
  selector:
    app: bongo-api
  externalIPs:
    - 103.105.49.249 # external-ip secret

# apiVersion: v1
# kind: Service
# metadata:
#   name: hastebin
#   namespace: josh-apps
#   labels:
#     app: hastebin
# spec:
# type: NodePort
# ports:
#   - port: 7777
#     nodePort: 30045
#     targetPort: 7777
# selector:
#   app: hastebin
# externalIPs:
#   - 103.105.49.249 # external-ip secret
