k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME}
  namespace: josh-apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ${HOST_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME}
                port:
                  number: 8443
  tls:
    - hosts:
        - ${HOST_URL}
      secretName: ssl-bongo
